Fixed some layout bugs; added markdown support for long descriptions

--- a/data/themes/default/css/default.css
+++ b/data/themes/default/css/default.css
@@ -276,6 +276,11 @@ div.section h1
   margin-bottom:       3px;
 }
 
+#content .method small p, #content .method small ul
+{
+  margin: 0px;
+}
+
 #content .class
 {
   margin:        5px 0px;
